style.css
body {
    background-color: rgb(0, 0, 59);
    color: rgb(147, 122, 187);
}

img {
    position:relative;
    float: right;
    width: 600px;
    height: 800px;
}

header {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 30%;
    font-size: 80px;
}

h1 {
    font-size: 40px;
}

#abme{
    text-align: left;
}

#techprojs {
    text-align: left;
    margin-top: 300px;
}

section {
    padding: 30px;
}

#pastworks{
    text-align: right;
    margin-top: 100px;
    padding-right: 50px;
}

#contact{
    margin-top: 100px;
    padding-left: 100px;
}

button{
    font-size: 20px;
    background-color: rgb(147, 122, 187);;
    color: rgb(0, 0, 59);
    padding: 10px;
}

label{
    font-size: 30px;
}

input{
    font-size: 30px;
    size: 30px;
    margin-bottom: 10px;
}

.socials{
    float: right;
    padding-right: 50px;
}

.form {
    float: left;
}

p{
    font-size: 20px;
}

